fix letter-spacing in scss

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -134,7 +134,7 @@ body {
         font-weight: bold;
         font-size: 22px;
         line-height: 27px;
-        letter-spacing: 0.01em;
+        letter-spacing: 0.015em;
       }
 
       p {
@@ -171,7 +171,7 @@ body {
       b {
         font-weight: bold;
         font-size: 22px;
-        letter-spacing: 0.01em;
+        letter-spacing: 0.015em;
       }
     }
 
@@ -284,7 +284,7 @@ body {
     p {
       font-size: 18px;
       line-height: 145.4%;
-      letter-spacing: 0.01em;
+      letter-spacing: 0.015em;
       color: #777777;
     }
 
