--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -20,7 +20,7 @@
     h1 {
       color: #181818;
       font-size: 24px;
-      letter-spacing: 0.1em;
+      letter-spacing: 0.015em;
       text-transform: uppercase;
       font-weight: 800;
     }
