--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -16,7 +16,7 @@
   &__title {
     font-size: 20px;
     font-weight: 900;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.015em;
     margin-bottom: 20px;
   }
 
